--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -462,6 +462,26 @@
         \begin{left}
             \quad 3)\text{ } ...\textbf{windschief zueinander}...
         \end{left}
+        \begin{center}
+            \begin{tikzpicture}[>=triangle 45]
+                \draw [line width=0.8pt] (-0.25,0.25) node {O};
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (3,4,4);
+                \draw [->,line width=0.8pt,color=red] (3,4,4) -- (5,2,-1);
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (4,0,0);
+                \draw [->,line width=0.8pt,color=red] (4,0,0) -- (4,5,0);
+                \draw [,line width=0.8pt,color=red,dashed] (1,6,9) -- (3,4,4);
+                \draw [,line width=0.8pt,color=red,dashed] (5,2,-1) -- (7,0,-6);
+                \draw [,line width=0.8pt,color=red,dashed] (4,-3,0) -- (4,0,0);
+                \draw [,line width=0.8pt,color=red,dashed] (4,5,0) -- (4,8,0);
+                \draw [line width=0.8pt,color=blue] (0.5,1.5) node {$\vv{q_1}$};
+                \draw [line width=0.8pt,color=blue] (2,0.3,0) node {$\vv{q_2}$};
+                \draw [line width=0.8pt,color=red] (3.5,2.75) node {$\vv{u_1}$};
+                \draw [line width=0.8pt,color=red] (4.3,1.8,0) node {$\vv{u_2}$};
+                \draw [line width=0.8pt] (6,2.65) node {$g$};
+                \draw [line width=0.8pt] (4.2,6,0) node {$h$};
+                \draw [line width=0.8pt,color=black] (7.2,3.7) node {Schnittpunkt nicht vorhanden};
+            \end{tikzpicture}
+        \end{center}
         \\
         \\
         ...sein oder...
@@ -635,19 +655,23 @@
 
         \paragraph{} Zwei nicht sich schneidende oder identische Geraden haben einen \textbf{eindeutig definierten Minimalabstand}. Bei zwei parallelen
         Geraden ist dies einfach zu visualisieren, der Abstand zweier windschiefer Geraden jedoch weniger. Im Folgenden sollen beide Fälle untersucht werden.
-
+        \\
+        \\
         \underline{\textbf{Parallele Geraden}}:
             \paragraph Der Abstand zweier paralleler Geraden $g$ und $h$ entspricht genau dem Abstand eines Punktes $P \in g \lor P\in h$ zur jeweiligen
             gegenüberliegenden Geraden. Somit genügt es den Abstand zwischen zwischen dem Stützpunkt einer Geraden und der anderen zu berechnen.
-
-        \underlin{\textbf{Windschiefe Geraden}}:
+        \\
+        \\
+        \underline{\textbf{Windschiefe Geraden}}:
             \paragraph{} Der minimale Abstand zweier windschiefer Geraden lässt sich mithilfe einer \textbf{Hilsebene} verbildlichen und bestimmen. Gegeben
-            seien zwei Geraden $g:\vv{x} = \vv{p} + r \cdot \vv{u}; r\in\R$ und $h:\vv{x} = \vv{q} + s \cdot \vv{v}; s\in \R$. Daraus folgt, dass:
-            $E:\vv{x} = \vv{p} + r \cdot \vv{u} + s \cdot \vv{v} \lor E:\vv{x} = \vv{q} + r \cdot \vv{u} + s \cdot \vv{v}; s,r\in\R$. Somit ergibt sich eine
+            seien zwei Geraden
+            $g:\vv{x} = \textcolor{blue}{\vv{p}} + r \cdot \textcolor{red}{\vv{u}}; r\in\R$ und $h:\vv{x} = \textcolor{blue}{\vv{q}} + s \cdot \textcolor{orange}{\vv{v}}; s\in \R$.
+            Daraus folgt, dass:
+            $E:\vv{x} = \textcolor{blue}{\vv{p}} + r \cdot \textcolor{red}{\vv{u}} + s \cdot \textcolor{orange}{\vv{v}} \lor E:\vv{x} = \textcolor{blue}{\vv{q}} + r \cdot \textcolor{red}{\vv{u}} + s \cdot \textcolor{orange}{\vv{v}}; s,r\in\R$. Somit ergibt sich eine
             Ebene, welche entweder die Gerade $g$ oder $h$ enthält und parallel zur anderen ist. Der Minimalabstand ist äquivalent zum Abstand zwischen
             einem Punkt der Geraden, die nicht in der Ebene enthalten ist, und der Ebene. Für die genaue Vorgehensweise von diesem Punkt aus empfiehlt es
-            sich sich den Teil \glqq Abstand zu einem Punkt \grqq unter Ebenen zuzuwenden.
-
+            sich sich den Teil \glqq Abstand zu einem Punkt\grqq  unter Ebenen zuzuwenden.
+        \\
         \begin{Bemerkung}
             \paragraph{} Zur Berechnung des Abstands zweier windschiefer Geraden gibt es zudem eine Formel, welche zugleich das
             \textbf{Ergebnis des Skalarprodukts} veranschaulicht. Aus zwei Geraden
