--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -702,6 +702,75 @@
             \end{tabular}
         \end{center}
 
+        \paragraph{} Die erste bei Geraden bereits eingeführte Form ist leicht zu verstehen. An den Stützvektor setzt man anschließend einen
+        zweiten Richtungsvektor; die beiden Vektoren werden \textbf{Spannvektoren} genannt, da sie gemeinsam die Ebene aufspannen. Da man
+        sich über diese beliebig in zwei Dimensionen bewegen kann, ist jeder Punkt in einer Ebene erreichbar. Bei der Bildung der Ebene muss
+        man beachten, dass die Spannvektoren \textbf{nicht kollinear} sind. In diesem Fall erhält man wieder eine Gerade.
+
+        \begin{center}
+            \begin{tikzpicture}[>=triangle 45]
+                \draw [->,line width=0.8pt] (-5.5,0,0) -- (5.5,0,0) node[below] {$x_2$};
+                \draw [->,line width=0.8pt] (0,-5.5,0) -- (0,5.5,0) node[right] {$x_3$};
+                \draw [->,line width=0.8pt] (0,0,-8.5) -- (0,0,8.5) node[below] {$x_1$};
+                \foreach  \x in {-5,...,-1,1,2,...,5}
+                    \draw [line width=0.8pt] (\x,0.1,0) -- (\x,-0.1,0) node[below] {\x};
+                \foreach  \x in {-5,...,-1,1,2,...,5}
+                    \draw [line width=0.8pt] (-0.1,\x,0) -- (0.1,\x,0) node[right] {\x};
+                \foreach  \x in {-7,...,-1,1,2,...,7}
+                    \draw [line width=0.8pt] (0,0.1,\x) -- (0,-0.1,\x) node[below] {\x};
+
+                \draw [line width=0.8pt] (-0.25,0.25) node {O};
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (3,4,4);
+                \draw [->,line width=0.8pt,color=red] (3,4,4) -- (5,2,-1);
+                \draw [->,line width=0.8pt,color=red] (3,4,4) -- (6,3,6);
+                \draw [,line width=0.8pt,color=red,dashed] (1,6,9) -- (3,4,4);
+                \draw [,line width=0.8pt,color=red,dashed] (5,2,-1) -- (7,0,-6);
+                \draw [,line width=0.8pt,color=red,dashed] (0,5,2) -- (3,4,4);
+                \draw [,line width=0.8pt,color=red,dashed] (6,3,6) -- (9,2,8);
+                \draw [->,line width=0.8pt,color=black,opacity=0.6] (6,3,6) -- (8,1,1);
+                \draw [->,line width=0.8pt,color=black,opacity=0.6] (5,2,-1) -- (8,1,1);
+                \draw[fill=red, opacity=0.5]  (3,4,4) -- (5,2,-1) -- (8,1,1) -- (6,3,6) -- cycle;
+                \foreach \x in {-1,...,5}
+                    \draw [line width=0.8pt,color=red,opacity=0.2] (-3 + 1*\x,8 - 1*\x,9.5 - 2.5*\x) -- (11 + 1*\x,1 - 1*\x,7.25 - 2.5*\x);
+                \draw [line width=0.8pt,color=blue] (0.5,1.5) node {$\vv{q}$};
+                \draw [line width=0.8pt,color=red] (3.5,2.75) node {$\vv{u_1}$};
+                \draw [line width=0.8pt,color=red] (2.3,1.35) node {$\vv{u_2}$};
+                \draw [line width=0.8pt] (6,2.65) node {$E$};
+            \end{tikzpicture}
+        \end{center}
+
+        \paragraph{} Die Normalenform und Parameterform sind weitaus weniger intuitiver und erfordern eine genauere Erklärung. Sie lässt sich
+        zudem leichter anhand einer Graphik erklären:
+
+        \begin{center}
+            \begin{tikzpicture}[>=triangle 45]
+                \draw [->,line width=0.8pt] (-5.5,0,0) -- (5.5,0,0) node[below] {$x_2$};
+                \draw [->,line width=0.8pt] (0,-5.5,0) -- (0,5.5,0) node[right] {$x_3$};
+                \draw [->,line width=0.8pt] (0,0,-8.5) -- (0,0,8.5) node[below] {$x_1$};
+                \foreach  \x in {-5,...,-1,1,2,...,5}
+                    \draw [line width=0.8pt] (\x,0.1,0) -- (\x,-0.1,0) node[below] {\x};
+                \foreach  \x in {-5,...,-1,1,2,...,5}
+                    \draw [line width=0.8pt] (-0.1,\x,0) -- (0.1,\x,0) node[right] {\x};
+                \foreach  \x in {-7,...,-1,1,2,...,7}
+                    \draw [line width=0.8pt] (0,0.1,\x) -- (0,-0.1,\x) node[below] {\x};
+                \draw [line width=0.8pt] (-0.25,0.25) node {O};
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (3,4,4);
+                \draw [->,line width=0.8pt] (0,0,0) -- (5,2,-1);
+                \draw[fill=red, opacity=0.5]  (-2,7,7) -- (2,3,-3) -- (8,1,1) -- (4,5,11) -- cycle;
+                \foreach \x in {-1,...,6}
+                    \draw [line width=0.8pt,color=red,opacity=0.2] (-5 + 1*\x,9 - 1*\x,9.75 - 2.5*\x) -- (9 + 1*\x,2 - 1*\x,8 - 2.5*\x);
+                \draw [line width=0.8pt] (2,2.45) -- (2,3);
+                \draw [line width=0.8pt] (2,3) -- (1.45,3);
+                \draw [->,line width=0.8pt] (5,2,-1) -- (3,4,4);
+                \draw [->,line width=0.8pt,color=red] (3,4,4) -- (3.5,9.5,6);
+                \draw [line width=0.8pt,color=blue] (0.5,1.5) node {$\vv{q}$};
+                \draw [line width=0.8pt] (3.6,2.75) node {$\vv{q}-\vv{x}$};
+                \draw [line width=0.8pt,color=red] (1.8,5) node {$\vv{n}$};
+                \draw [line width=0.8pt] (2.7,0.75,-0.5) node {$\vv{x}$};
+                \draw [line width=0.8pt] (6,2.65) node {$E$};
+            \end{tikzpicture}
+        \end{center}
+
     Spurpunkte und Geraden
 
     Umrechnungen
@@ -722,7 +791,7 @@
 \section{Kreuzprodukt}
 \section{Spatprodukt}
 \section{Dyadisches Produkt}
-\section{S"atze}
+\section{Sätze}
 
 \subsection{Der Satz des Apollinius}
 \begin{small}
