--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -1,4 +1,4 @@
-\chapter{Algorythmik}
+\chapter{Algorithhmik}
 \section{Algorithmen und Programmierung}
 \begin{Definition}
 	Algorithmen besitzen die folgenden charakteristischen Eigenschaften:
@@ -47,7 +47,7 @@ Python verwendet Schleifen und Verzweigungen.\\
 		#Inhalt der Verzweigung
 \end{lstlisting}
 \subsubsection{Beispiel}
-Man nehme, den Algorithmus, der die Fibonacci-Sequenz bis zum $n$-ten Glied generiert:\\
+Man nehme den Algorithmus, der die Fibonacci-Sequenz bis zum $n$-ten Glied generiert:\\
 \begin{lstlisting}[language=Python]
 	a = 0
 	b = 1
