--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -30,7 +30,7 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
   Eine Funktion $F$ heißt Stammfunktion der Funktion $f$, wenn $F'(x)=f(x)$
   gilt.\\
   Ist $F$ irgendeine Stammfunktion von $f$, dann ist auch $F(x)+C$ (mit
-  konstantem $C$) eine Stammfunktion, denn beim Ableiten fällt ja $C$ als
+  konstantem $C$) eine Stammfunktion, denn beim Ableiten fällt $C$ als
   konstanter Summand weg. Jede Funktion hat also unendlich viele
   Stammfunktionen, die sich aber nur um einen konstanten Summanden
   unterscheiden.
