--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -37,7 +37,6 @@ Anhand mancher Überlegungen, denen wir jetzt nachgehen werden, lassen sich eini
 
 	\subsection{Eigenschaften}
 
-		\section{Die Logarythmusfunktion}
+		\section{Die Logarithmusfunktion}
 
 	\subsection{Eigenschaften}
-
