Endlich weiterkommen :heart_eyes:

--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage{enumitem} %angepasstes enumerieren
 \usepackage{enumerate} % Zeichen der Enumerierung beliebig wählen können
 \usepackage{hyperref}
+\usepackage[makeroom]{cancel}        % Durchgestrichene Terme mit \cancel{}
 \usetikzlibrary{arrows}
 
 \pagestyle{fancy}
@@ -38,6 +39,7 @@
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
+
 
 \include{style}
 
