--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -199,7 +199,7 @@ Bei gebrochenrationalen Funktionen ist dies der Fall, wenn der Z"ahlergrad klein
 \item \textbf{Schr"age Asymptote}: Sie ist eine Gerade ($g:\R \rightarrow \R$), der sich $f$ mit $|x|\rightarrow \infty$ beliebig ann"ahert:\\
 \indent \qquad$\lim\limits_{x \rightarrow \infty}{[f(x)-g(x)]}=0$ oder $\lim\limits_{x \rightarrow -\infty}{[f(x)-g(x)]}=0$\\
 Bei einer gebrochenrationalen Funktion ist der ''Fehlergrad'', das hei"st der Abstand von $g$ zu $f$ durch den Rest der Polynomdivision von Z"ahler mit Nenner gegeben.\\
-\item \textbf{Asymptotische Kurven} Indem man in der Definition der schr"agen Asymptote auch Polynome zul"asst, erh"alt man N"aherungskuven, die die gleiche Limesbedingung erf"ullen muss:\\
+\item \textbf{Asymptotische Kurven} Indem man in der Definition der schr"agen Asymptote auch Polynome zul"asst, erh"alt man N"aherungskuven, die die gleiche Limesbedingung erf"ullen m"ussen:\\
 \indent \qquad$\lim\limits_{x \rightarrow \infty}{[f(x)-P(x)]}=0$ oder $\lim\limits_{x \rightarrow -\infty}{[f(x)-P(x)]}=0$\\
 Diese begegnen einen bei gebrochenrationalen Funktion mit $n>m+1$.\\
 \end{enumerate}
@@ -222,7 +222,7 @@ Die Funktion $f$ hat eine Ableitungsfunktion $f'$. Falls $f$...
 \end{enumerate}
 Beim Aufstellen der Monotonietabelle sind Definitinsl"ucken zu beachten.\\
 \\
-Es handelt sich dabei um eine Tabelle, die die Definitionsmenge in Intervalle mit monotonen Steigungsverhalten unterteilt wird. Das Monotonieverhalten ver"andert sich an Extrem-, Wende- oder Polstellen.\\
+Es handelt sich dabei um eine Tabelle, die die Definitionsmenge in Intervalle mit monotonen Steigungsverhalten unterteilt wird. Das Monotonieverhalten ver"andert sich an Extrem- oder Polstellen.\\
 \end{Definition}
 \begin{Bemerkung}
 $f$ sei eine Funktion...
@@ -260,11 +260,12 @@ Die Funktion $f(x)=x^2$ mit $D_{f} = \R_{0}^{+}$ ist umzukehren. Leichtes Spiel.
 \begin{array}{rcccccl}
 $\Rightarrow $& $y$ &$ = $&$ x^2$\\
 $\Leftrightarrow $&$ x $&$ = $&$ \sqrt{y}$ &\quad \small { \textit{Variablen tauschen}}\\
-$\Rightarrow $&$ y $&$ = $&$ \sqrt{x}$\\
+$\Leftrightarrow $&$ y $&$ = $&$ \sqrt{x}$\\
 $\Rightarrow $&$ \overline{f}(x)$&$=$&$\sqrt{x}$\\
 
 \end{array}
 \end{Beispiel}
+
 \end{minipage}
 \hfill
 \begin{minipage}[b]{0.4\linewidth}
@@ -300,6 +301,59 @@ $\Rightarrow $&$ \overline{f}(x)$&$=$&$\sqrt{x}$\\
 
 
 \subsection{Beispiel}
+
+$f(x) = \dfrac{4x^2 -8x +4}{2x-1} = \dfrac{(2x-2)^2}{2x-1}$ \qquad \qquad $D_{f}=\R \backslash \{ \frac{1}{2} \}$ \\ \\ \\
+$f'(x) = \dfrac{(8x-8)(2x-1)-(4x^2-8x+4)(2)}{(2x-1)^2} = \dfrac{16x^2-8x-16x+8-8x^2+16x-8}{4x^2-4x+1} = \dfrac{8x^2-8x}{(2x-1)^2}$\\ \\ \\
+\begin{array}{rcccl}
+$f''(x) $ &$ = $&$ \dfrac{\textcolor{red}{(16x-8)}(4x^2-4x+1)-(8x^2-8x)\textcolor{red}{(8x-4)}}{(\textcolor{red}{(2x-1)}^2)^2}$\\ \\
+& $=$ & $\dfrac{\cancel{(2x-1)}\cdot 8 \cdot (4x^2-4x+1) - (8x^2-8x)\cdot 4 \cdot \cancel{(2x-1)}}{(2x-1)^{\cancel{4} 3}}$ & $=$ & $\dfrac{8}{8x^3-12x^3+6x-1} $\\
+\end{array}
+
+\subsubsection{Achsenschnittpunkte}
+
+\underline{Bestimmung der Nullstelle(n):} \\ 
+
+\begin{array}{rcccl}
+$\Rightarrow    &    f(x)    &    =    &    0 & D=\R \backslash \{ \frac{1}{2} \}$ \\
+$\Leftrightarrow    &    \dfrac{(2x-2)^2}{(2x-1)}     &     =     &      0$\\
+$\Leftrightarrow    &    2x-2     &     =     &     0$\\
+$\Leftrightarrow    &    x      &    =     &     1   &  L = \{ 1 \} $    \\ 
+\end{array}\\
+
+Die Gleichung f"ur die senkrechte Asymptote lautet deshalb $x=1$ \\
+
+\underline{Bestimmung des Y-Achsenabschnitts:} \\ \\
+$\Rightarrow f(0) = \frac{4}{-1} = -4$ \\\\\\
+
+\underline{Symmetrie:} \\ \\
+
+Man kann anhand des GTR vermuten dass $f$ punktsymmetrisch ist. Dieser Symmetriepunkt $P_{0}$ l"asst sich entweder dort ablesen oder ist (h"aufig) den Schnittpunkt der Asymptoten. $P_{o}(\frac{1}{2}|-2)$\\
+
+\begin{array}{rccl}
+$\Rightarrow & f(x_{0}+h)-y_{0} & = & f(\frac{1}{2} + h) +2 $\\ \\
+$&&=&\dfrac{4(\frac{1}{2}+h)^2 -8(\frac{1}{2}-h) +4}{2(\frac{1}{2}+h)-1}+2$\\ \\
+$&&=&\dfrac{4(\frac{1}{4} +h +h^2)-4 -8h +4}{2h} + \dfrac{4h}{2h}    $\\ \\
+$&&=&\dfrac{1+4h+4h^2-8h+4h}{2h} = \dfrac{4h^2+1}{2h}\\ \\ \\
+\end{array}
+
+\begin{array}{rccl}
+$\Rightarrow & -f(x_{0}-h)+y_{0} & = & -f(\frac{1}{2} - h) -2 $\\ \\
+$&&=&-\dfrac{4(\frac{1}{2}-h)^2 -8(\frac{1}{2}-h) +4}{2(\frac{1}{2}-h)-1}-2$\\ \\
+$&&=&-\dfrac{4(\frac{1}{4} -h +h^2)-4 +8h +4}{-2h} - \dfrac{4h}{2h}    $\\ \\
+$&&=&\dfrac{1-4h+4h^2+8h-4h}{2h} = \dfrac{4h^2+1}{2h}\\ \\ 
+\end{array}
+Hiermit hat man die Punktsymmetrie von $f$ zu $P_{0}$ bewiesen.\\\\\\
+
+\underline{Bestimmung der Grenzwerte der Funktion:} \\ \\
+
+\lim\limits_{x \rightarrow x_{0^{+}}}
+
+
+
+
+
+
+ 
 
 	\section{Funktionenscharen}
 
