--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -331,7 +331,7 @@ Man kann anhand des GTR vermuten dass $f$ punktsymmetrisch ist. Dieser Symmetrie
 
 \begin{array}{rccl}
 $\Rightarrow & f(x_{0}+h)-y_{0} & = & f(\frac{1}{2} + h) +2 $\\ \\
-$&&=&\dfrac{4(\frac{1}{2}+h)^2 -8(\frac{1}{2}-h) +4}{2(\frac{1}{2}+h)-1}+2$\\ \\
+$&&=&\dfrac{4(\frac{1}{2}+h)^2 -8(\frac{1}{2}+h) +4}{2(\frac{1}{2}+h)-1}+2$\\ \\
 $&&=&\dfrac{4(\frac{1}{4} +h +h^2)-4 -8h +4}{2h} + \dfrac{4h}{2h}    $\\ \\
 $&&=&\dfrac{1+4h+4h^2-8h+4h}{2h} = \dfrac{4h^2+1}{2h}\\ \\ \\
 \end{array}
@@ -341,19 +341,113 @@ $\Rightarrow & -f(x_{0}-h)+y_{0} & = & -f(\frac{1}{2} - h) -2 $\\ \\
 $&&=&-\dfrac{4(\frac{1}{2}-h)^2 -8(\frac{1}{2}-h) +4}{2(\frac{1}{2}-h)-1}-2$\\ \\
 $&&=&-\dfrac{4(\frac{1}{4} -h +h^2)-4 +8h +4}{-2h} - \dfrac{4h}{2h}    $\\ \\
 $&&=&\dfrac{1-4h+4h^2+8h-4h}{2h} = \dfrac{4h^2+1}{2h}\\ \\ 
-\end{array}
+\end{array}\\
 Hiermit hat man die Punktsymmetrie von $f$ zu $P_{0}$ bewiesen.\\\\\\
 
 \underline{Bestimmung der Grenzwerte der Funktion:} \\ \\
 
-\lim\limits_{x \rightarrow x_{0^{+}}}
+$\Rightarrow \lim\limits_{x \rightarrow +\infty} {f(x)} = \lim\limits_{x \rightarrow +\infty} {\dfrac{4x^2-8x+4}{2x-1}} = \dfrac{\lim\limits_{x \rightarrow +\infty} {(4-\frac{8}{x} + \frac{4}{x^2}) }}{{\lim\limits_{x \rightarrow +\infty}}{ \frac{2}{x} - \frac{1}{x^2} }} = \dfrac{4-0+0}{0-0} = +\infty $\\ \\
 
+$\Rightarrow \lim\limits_{x \rightarrow -\infty} {f(x)} = \lim\limits_{x \rightarrow -\infty} {\dfrac{4x^2-8x+4}{2x-1}} = \dfrac{\lim\limits_{x \rightarrow +\infty} {(-4+\frac{8}{x} + \frac{4}{x^2}) }}{{\lim\limits_{x \rightarrow +\infty}}{ -\frac{2}{x} - \frac{1}{x^2} }} = \dfrac{-4+0+0}{-0-0} = -\infty $\\ \\
 
+\begin{Bemerkung}
+Da die Punktsymmetrie vorher bewiesen wurde h"atte der $\lim\limits_{x \rightarrow -\infty} {f(x)}$ gar nicht errechnet werden m"ussen!
+\end{Bemerkung}
 
+\begin{array}{rccccl}
+$\Rightarrow &  \lim\limits_{x \rightarrow {\frac{1}{2}}^{+}} {f(x)} & = & \lim\limits_{h \rightarrow 0} {\dfrac{4(\frac{1}{2} +h)^2 -8(\frac{1}{2} +h) +4}{2(\frac{1}{2}+h) -1} } & = & \lim\limits_{h \rightarrow 0} {\dfrac{1+4h+4h^2-4+h+4 }{2h}}\\ \\
+&&&&=&\dfrac{\lim\limits_{h \rightarrow 0} {1+5h+4h^2}}{\lim\limits_{h \rightarrow 0}{2h}} $\\ \\
+&&&&=& \dfrac{1}{0} = +\infty \\ \\
+\end{array}
 
+\begin{array}{rccccl}
+$\Rightarrow &  \lim\limits_{x \rightarrow {\frac{1}{2}}^{-}} {f(x)} &=& \lim\limits_{h \rightarrow 0} {\dfrac{4(\frac{1}{2} -h)^2 -8(\frac{1}{2} -h) +4}{2(\frac{1}{2}-h) -1} } &=& \lim\limits_{h \rightarrow 0} \dfrac{1-4h+4h^2-4-4h+4}{-2h} \\ \\
+&&&&=& \dfrac{\lim\limits_{h \rightarrow 0} {1-8h+4h^2} }{\lim\limits_{h \rightarrow 0}{-2h}} \\ \\
+&&&&=& -\dfrac {1}{0} = - \infty $\\
+\end{array} 
 
+\underline{Asymptoten:} \\ \\
 
- 
+Es liegt eine nicht hebbare Definitionsl"ucke bei $x=\dfrac{1}{2}$ vor, also ist dies die Gleichung der senkrechten Asymptote.\\\\
+Da der Grenzwert $\rightarrow \pm \infty$ keinen eindeutigen Wert annimmt, macht man eine Polynomdivision ...\\\\
+
+\begin{array}{rccccccl}
+$ \Rightarrow & (4x^2 & -8x & +4) & : & (2x-1) &=& 2x-3+\dfrac{1}{2x-1} \\ \\
+& -(4x^2 & -2x) & & & & & \\ \\
+& & -6x & +4 & & & & \\ \\
+& & -(-6x & +3) & & & & \\ \\
+& & & 1 & & & &$ \\ \\
+\end{array}
+
+... und erh"alt die Gleichung der schiefen Asymptote $y = 2x-3$ \\
+
+\underline{Monotonieverhalten:} \\ \\
+
+Untersuchung auf Extremstellen: 
+\begin{itemize}
+\item Notwendige Bedingung: $\Rightarrow f'(x)=0 \\ \\
+\Leftrightarrow \dfrac{8x^2-8x}{4x^2-4x+1}=0 \qquad \qquad D=\R \backslash \{ \frac{1}{2} \}\\\\
+\Leftrightarrow x(8x-8)=0 \\ \\
+\Leftrightarrow x=0 \quad \lor \quad x=1 \qquad \qquad L=\{1;0\}$ \\ 
+
+\item Hinreichende Bedingung: Vorzeichenwechsel $f'(x)$ oder $f''(x)\neq 0$ \\
+
+\begin{tikzpicture}
+\tikzset{arrow style/.style = {blue,->,> = latex',
+shorten > = 6pt,
+shorten < = 6pt}}
+\tkzTabInit{$x$ /1, $ x $ /1.2, $(8x-8) $ /1.2, $(2x-1)^2$ /1.2, $f'(x)$ /1.2, $f(x)$ /3,}   {$-\infty$ ,$0$ , $\frac{1}{2}$, $1$ ,$+\infty$}
+\tkzTabLine{{},-,z,+,t,+,t,+,} 
+\tkzTabLine{{},-,t,-,t,-,z,+,} 
+\tkzTabLine{{},+,t,+,d,+,t,+}
+\tkzTabLine{{},+,z,-,d,-,z,+,}
+\tkzTabVar{ - / $-\infty$ , + / $(0|f(0))$ / , -D+ / $-\infty$/$+\infty$  , - / $(1|f(1))$ , + / $+\infty$ }
+\end{tikzpicture}\\
+
+\end{itemize}
+
+\underline{Kr"ummungsverhalten:} \\ 
+
+Untersuchung auf Wendestellen:
+\begin{itemize}
+\item Notwendige Bedingung: $\Rightarrow f''(x)=0 \\ \\
+ \Leftrightarrow \dfrac{8}{(2x-1)^3} = 0\\\\
+ \Leftrightarrow 8 = 0 \qquad$ \Lightning \\
+
+\end{itemize}
+
+Die Funktion weist keine Wendestellen vor. Bei L"osbarkeit der Gleichung ist als hinreichende Bedingung ein Vorzeichenwechsel von $f''(x)$ zu zeigen oder $f'''\neq 0$ zu beweisen. Dann kann die Skizze beginnen:
+
+\definecolor{ccqqqq}{rgb}{0.8,0.,0.}
+\definecolor{dcrutc}{rgb}{0.8627450980392157,0.0784313725490196,0.23529411764705882}
+\definecolor{ududff}{rgb}{0.30196078431372547,0.30196078431372547,1.}
+\definecolor{qqwuqq}{rgb}{0.,0.39215686274509803,0.}
+\definecolor{cqcqcq}{rgb}{0.7529411764705882,0.7529411764705882,0.7529411764705882}
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
+\draw [color=cqcqcq,, xstep=1.0cm,ystep=1.0cm] (-5.9,-6.9) grid (6.9,3.9);
+\draw[->,color=black] (-5.9,0.) -- (6.9,0.);
+\foreach \x in {-5.,-4.,-3.,-2.,-1.,1.,2.,3.,4.,5.,6.}
+\draw[shift={(\x,0)},color=black] (0pt,2pt) -- (0pt,-2pt) node[below] {\footnotesize $\x$};
+\draw[->,color=black] (0.,-6.9) -- (0.,3.9);
+\foreach \y in {-6.,-5.,-4.,-3.,-2.,-1.,1.,2.,3.}
+\draw[shift={(0,\y)},color=black] (2pt,0pt) -- (-2pt,0pt) node[left] {\footnotesize $\y$};
+\draw[color=black] (0pt,-10pt) node[right] {\footnotesize $0$};
+\clip(-5.9,-6.9) rectangle (6.9,3.9);
+\draw[line width=2.pt,color=qqwuqq,smooth,samples=100,domain=-5.9:6.9] plot(\x,{(4.0*(\x)^(2.0)-8.0*(\x)+4.0)/(2.0*(\x)-1.0)});
+\draw [line width=1.2pt,color=dcrutc] (0.5,-6.9) -- (0.5,3.9);
+\draw[line width=1.2pt,color=ccqqqq,smooth,samples=100,domain=-5.9:6.9] plot(\x,{2.0*(\x)-3.0});
+\begin{scriptsize}
+\draw[color=qqwuqq] (-1.0968171494014107,-6.204884007477092) node {$f$};
+\draw [fill=ududff] (0.5,-2.) circle (1.5pt);
+\draw[color=ududff] (0.8603982501879224,-1.9345958629185638) node {$P$};
+\draw[color=dcrutc] (0.24753282203368673,3.363724612737388) node {$g$};
+\draw [fill=ududff] (1.,0.) circle (2.5pt);
+\draw[color=ududff] (1.2854500793916663,-0.5012815551385023) node {$E_{2}$};
+\draw [fill=ududff] (0.,-4.) circle (2.5pt);
+\draw[color=ududff] (-0.8299241403665018,-3.3086006131353125) node {$E_{1}$};
+\draw[color=ccqqqq] (-2.105079627977734,-5.908336219660527) node {$h$};
+\end{scriptsize}
+\end{tikzpicture}
 
 	\section{Funktionenscharen}
 
